--- a/external_libs/continual_learning_algorithms/requirements.txt
+++ b/external_libs/continual_learning_algorithms/requirements.txt
@@ -49,7 +49,7 @@ psutil==5.7.0
 ptyprocess==0.6.0
 pycurl==7.43.0
 Pygments==2.6.1
-pygobject==3.20.0
+pygobject
 pymongo==3.10.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
