--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,97 @@
+absl-py==0.9.0
+asn1crypto==0.24.0
+astor==0.8.1
+attrs==20.1.0
+backcall==0.2.0
+cairocffi==0.8.0
+certifi==2020.6.20
+cffi==1.11.5
+chardet==3.0.4
+colorama==0.4.3
+comet-git-pure==0.19.16
+comet-ml==3.2.0
+configobj==5.0.6
+contextlib2==0.6.0.post1
+coverage==5.2.1
+cryptography==2.1.4
 cycler==0.10.0
+decorator==4.4.2
+everett==1.0.2
 future==0.18.2
+gast==0.2.2
+google-pasta==0.1.8
+grpcio==1.26.0
+h5py==2.10.0
+hyperopt==0.1.2
+idna==2.6
+importlib-metadata==1.7.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+joblib==0.16.0
+json-tricks==3.15.2
+jsonschema==3.2.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keyring==10.6.0
+keyrings.alt==3.0
 kiwisolver==1.2.0
-matplotlib==3.2.1
+Markdown==3.1.1
+matplotlib==3.3.1
+netifaces==0.10.9
+networkx==2.5
+nni==1.8
 numpy==1.18.5
-pandas==1.0.4
-Pillow==7.1.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-scipy==1.4.1
-seaborn==0.10.1
-six==1.15.0
-torch==1.5.0
-torchvision==0.6.0
+nvidia-ml-py3==7.352.0
 opencv-contrib-python==4.2.0.34
 opencv-python==4.2.0.34
-tensorflow==1.15.2
+opt-einsum==3.1.0
+pandas==1.1.1
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.2
+pkginfo==1.5.0.1
+ply==3.11
+prompt-toolkit==3.0.6
+protobuf==3.11.2
+psutil==5.7.2
+ptyprocess==0.6.0
+pycparser==2.18
+pycrypto==2.6.1
+Pygments==2.6.1
+pygobject==3.26.1
+pymongo==3.11.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-apt==1.6.4
+python-dateutil==2.8.1
+PythonWebHDFS==0.2.3
+pytz==2020.1
+pyxdg==0.25
+requests==2.24.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+schema==0.7.2
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.10.1
+SecretStorage==2.3.1
+simplejson==3.17.2
+six==1.15.0
+tensorboard==1.15.0
+tensorflow-estimator==1.15.1
 tensorflow-gpu==1.15.2
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.48.2
+traitlets==4.3.3
+urllib3==1.25.10
+wcwidth==0.2.5
+websocket-client==0.57.0
+websockets==8.1
+Werkzeug==0.16.1
+wrapt==1.11.2
+wurlitzer==2.0.1
+xcffib==0.5.1
+zipp==3.1.0
